Small Fix: CSS wrapping, hotkey display

--- a/Synergism.css
+++ b/Synergism.css
@@ -2222,7 +2222,7 @@ p#reincarnatehotkeys {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 126%;
+    width: 130%;
 }
 
 .cubeToQuark {
